<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Quick Launcher</string>
    <string name="action_settings">Settings</string>
    <string name="color_for_this_entry">Colors &amp; Size</string>
    <string name="rename">Rename</string>
    <string name="uninstall">Uninstall</string>
    <string name="fonts">Fonts</string>
    <string name="themes">Themes</string>
    <string name="set_to_primary_colors">Set Primary Colors</string>
    <string name="backup">Backup</string>
    <string name="reset_to_default_settings">Reset to default Settings</string>
    <string name="app_info">App Info</string>
    <string name="random_colors">Random Colors</string>
    <string name="customize_with_color_sniffer" translatable="false">ColorSniffer…</string>
    <string name="reset_to_default">Reset All</string>
    <string name="freeze_size">Freeze Size</string>
    <string name="hide">Hide</string>
    <string name="unfreeze_size">Unfreeze size</string>
    <string name="hidden_apps">Hidden Apps</string>
    <string name="frozen_apps">Frozen Apps</string>
    <string name="restore">Restore</string>
    <string name="fixed_colors">Fixed Colors</string>
    <string name="freeze_apps_size">Freeze Apps Size</string>
    <string name="unfreeze_app_size">Unfreeze Apps Size</string>
    <string name="default_theme">Default Theme</string>
    <string name="background_wallpaper">Background Wallpaper</string>
    <string name="white_on_black">White on Black</string>
    <string name="black_on_white">Black on White</string>
    <string name="white_on_grey">White on Grey</string>
    <string name="black_on_grey">Black on Grey</string>
    <string name="hacker_green">Hacker Green</string>
    <string name="hacker_red">Hacker Red</string>
    <string name="choose_old_backup_files">Choose previous backup file</string>
    <string name="color_sniffer" translatable="false">Color Sniffer</string>
    <string name="from_clipboard">From Clipboard</string>
    <string name="from_color_sniffer_app">From ColorSniffer App</string>
    <string name="backup_saved_to_downloads">Backup saved to Downloads</string>
    <string name="some_error_occurred">Some error occurred</string>
    <string name="choose_old_backup_file">Choose old backup file</string>
    <string name="on">:On</string>
    <string name="off">:Off</string>
    <string name="alignment">Alignment</string>
    <string name="start">Start</string>
    <string name="center">Center</string>
    <string name="end">End</string>
    <string name="padding">Padding</string>
    <string name="remove">Remove</string>
    <string name="open">Open</string>
    <string name="reset_color">Reset Color</string>
    <string name="restore_default_fonts">Restore Default fonts</string>
    <string name="select_fonts">Select fonts</string>
    <string name="sort_apps_by">Sort Apps By</string>
    <string name="sort_apps_reverse">Sort Apps Reverse Order</string>
    <string name="by_name">Name</string>
    <string name="by_opening_counts">App Usage</string>
    <string name="by_color">Color</string>
    <string name="custom">Customs</string>
    <string name="by_size">Size</string>
    <string name="update_time">Update time</string>
    <string name="recently_first">Recently first</string>
    <string name="restart_launcher">Restart Launcher</string>
    <string name="sym_plus">+</string>
    <string name="sym_minus">-</string>
    <string name="space" />
    <string name="_34">34</string>
    <string name="left">Left</string>
    <string name="top">Top</string>
    <string name="right">Right</string>
    <string name="bottom">Bottom</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search">Search</string>
    <string name="rate_app">Rate app</string>
    <string name="more_apps">More apps</string>
    <string name="share">Share</string>
    <string name="more_app_loitpp">People can criticise me all the time they want, by this is what I am and I will not change the way I live for them.
\nI live the way I want to flow.
\nIf we don’t transform the world, who will? If not now, when?
\nIf you have something to give, give it now
\nDo your little bit of good where you are.
\nIt’s those little bits of good put together that overwhelm the world.
\nDon’t just think, do it. Now it is you turn, do it now, download my apps and rate 5 stars. Thank you!
\nhttps://play.google.com/store/apps/dev?id=9198084038765766736</string>
    <string name="choose_launcher">Choose launcher</string>
    <string name="setting">Setting</string>
    <string name="warning">Warning</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="term_amp_policy"><![CDATA[Term & Policy]]></string>
    <string name="read_policy">Thank you for your trust and choosing our products and services.\n
        By selecting "Agree and Continue", you certify that you have read and agree to our User Agreement and Privacy and accept that we collect, use and process your personal information in accordance with the terms of the Privacy policy</string>
    <string name="okay">Okay</string>
    <string name="user_agreement_and_privacy_policy">User Agreement and Privacy Policy</string>
    <string name="agree_and_continue">Agree and Continue</string>
    <string name="disagree">Disagree</string>
    <string name="x">ⓧ</string>
    <string name="no_data">(T_T)\nNo data</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="cancel">Cancel</string>
    <string name="verify_your_identity">Verify your identity</string>
</resources>
