<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_color"
        android:title="@string/color_for_this_entry" />
    <item
        android:id="@+id/menu_rename"
        android:title="@string/rename" />
    <item
        android:id="@+id/menu_freeze_size"
        android:title="@string/freeze_size" />
    <item
        android:id="@+id/menu_app_info"
        android:title="@string/app_info" />
    <item
        android:id="@+id/menu_reset_color"
        android:title="@string/reset_color" />
    <item
        android:id="@+id/menu_hide"
        android:title="@string/hide" />
    <item
        android:id="@+id/menu_reset_to_default"
        android:title="@string/reset_to_default" />
    <item
        android:id="@+id/menu_uninstall"
        android:title="@string/uninstall" />
</menu>
