<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/round_medium"
    app:cardElevation="@dimen/margin_padding_small"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/margin_padding_medium"
            android:text="@string/setting"
            android:textSize="@dimen/txt_large"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DEDEDE" />

        <com.factor.bouncy.BouncyNestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvVersion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="@dimen/margin_padding_medium"
                    android:paddingTop="@dimen/margin_padding_small"
                    android:paddingEnd="@dimen/margin_padding_medium"
                    android:paddingBottom="@dimen/margin_padding_small"
                    android:textSize="@dimen/txt_medium"
                    tools:text="Version 1.2.3" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#DEDEDE" />

                <TextView
                    android:id="@+id/tvDefaultLauncher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="@dimen/margin_padding_medium"
                    android:paddingTop="@dimen/margin_padding_small"
                    android:paddingEnd="@dimen/margin_padding_medium"
                    android:paddingBottom="@dimen/margin_padding_small"
                    android:text="@string/choose_launcher"
                    android:textSize="@dimen/txt_medium" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#DEDEDE" />

                <TextView
                    android:id="@+id/settingsFonts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="@dimen/margin_padding_medium"
                    android:paddingTop="@dimen/margin_padding_small"
                    android:paddingEnd="@dimen/margin_padding_medium"
                    android:paddingBottom="@dimen/margin_padding_small"
                    android:text="@string/fonts"
                    android:textSize="@dimen/txt_medium" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#DEDEDE" />

                <TextView
                    android:id="@+id/settingsThemes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="@dimen/margin_padding_medium"
                    android:paddingTop="@dimen/margin_padding_small"
                    android:paddingEnd="@dimen/margin_padding_medium"
                    android:paddingBottom="@dimen/margin_padding_small"
                    android:text="@string/themes"
                    android:textSize="@dimen/txt_medium" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#DEDEDE" />

                <TextView
                    android:id="@+id/settingsColorSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="@dimen/margin_padding_medium"
                    android:paddingTop="@dimen/margin_padding_small"
                    android:paddingEnd="@dimen/margin_padding_medium"
                    android:paddingBottom="@dimen/margin_padding_small"
                    android:text="@string/color_for_this_entry"
                    android:textSize="@dimen/txt_medium" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#DEDEDE" />

                <TextView
                    android:id="@+id/settingsAlignment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="@dimen/margin_padding_medium"
                    android:paddingTop="@dimen/margin_padding_small"
                    android:paddingEnd="@dimen/margin_padding_medium"
                    android:paddingBottom="@dimen/margin_padding_small"
                    android:text="@string/alignment"
                    android:textSize="@dimen/txt_medium" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#DEDEDE" />

                <TextView
                    android:id="@+id/settingsPadding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="@dimen/margin_padding_medium"
                    android:paddingTop="@dimen/margin_padding_small"
                    android:paddingEnd="@dimen/margin_padding_medium"
                    android:paddingBottom="@dimen/margin_padding_small"
                    android:text="@string/padding"
                    android:textSize="@dimen/txt_medium" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#DEDEDE" />

                <TextView
                    android:id="@+id/settingsColorSniffer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="@dimen/margin_padding_medium"
                    android:paddingTop="@dimen/margin_padding_small"
                    android:paddingEnd="@dimen/margin_padding_medium"
                    android:paddingBottom="@dimen/margin_padding_small"
                    android:text="@string/customize_with_color_sniffer"
                    android:textSize="@dimen/txt_medium" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#DEDEDE" />

                <TextView
                    android:id="@+id/settingsSortAppBy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="@dimen/margin_padding_medium"
                    android:paddingTop="@dimen/margin_padding_small"
                    android:paddingEnd="@dimen/margin_padding_medium"
                    android:paddingBottom="@dimen/margin_padding_small"
                    android:text="@string/sort_apps_by"
                    android:textSize="@dimen/txt_medium" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#DEDEDE" />

                <TextView
                    android:id="@+id/settingsSortAppReverse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="@dimen/margin_padding_medium"
                    android:paddingTop="@dimen/margin_padding_small"
                    android:paddingEnd="@dimen/margin_padding_medium"
                    android:paddingBottom="@dimen/margin_padding_small"
                    android:text="@string/sort_apps_reverse"
                    android:textSize="@dimen/txt_medium" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#DEDEDE" />

                <TextView
                    android:id="@+id/settingsFreezeSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="@dimen/margin_padding_medium"
                    android:paddingTop="@dimen/margin_padding_small"
                    android:paddingEnd="@dimen/margin_padding_medium"
                    android:paddingBottom="@dimen/margin_padding_small"
                    android:text="@string/freeze_apps_size"
                    android:textSize="@dimen/txt_medium" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#DEDEDE" />

                <TextView
                    android:id="@+id/settingsHiddenApps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="@dimen/margin_padding_medium"
                    android:paddingTop="@dimen/margin_padding_small"
                    android:paddingEnd="@dimen/margin_padding_medium"
                    android:paddingBottom="@dimen/margin_padding_small"
                    android:text="@string/hidden_apps"
                    android:textSize="@dimen/txt_medium" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#DEDEDE" />

                <TextView
                    android:id="@+id/settingsFrozenApps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="@dimen/margin_padding_medium"
                    android:paddingTop="@dimen/margin_padding_small"
                    android:paddingEnd="@dimen/margin_padding_medium"
                    android:paddingBottom="@dimen/margin_padding_small"
                    android:text="@string/frozen_apps"
                    android:textSize="@dimen/txt_medium" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#DEDEDE" />

                <TextView
                    android:id="@+id/settingsBackup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="@dimen/margin_padding_medium"
                    android:paddingTop="@dimen/margin_padding_small"
                    android:paddingEnd="@dimen/margin_padding_medium"
                    android:paddingBottom="@dimen/margin_padding_small"
                    android:text="@string/backup"
                    android:textSize="@dimen/txt_medium" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#DEDEDE" />

                <TextView
                    android:id="@+id/settingsRestore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="@dimen/margin_padding_medium"
                    android:paddingTop="@dimen/margin_padding_small"
                    android:paddingEnd="@dimen/margin_padding_medium"
                    android:paddingBottom="@dimen/margin_padding_small"
                    android:text="@string/restore"
                    android:textSize="@dimen/txt_medium" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#DEDEDE" />

                <TextView
                    android:id="@+id/settingsResetToDefaults"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="@dimen/margin_padding_medium"
                    android:paddingTop="@dimen/margin_padding_small"
                    android:paddingEnd="@dimen/margin_padding_medium"
                    android:paddingBottom="@dimen/margin_padding_small"
                    android:text="@string/reset_to_default_settings"
                    android:textSize="@dimen/txt_medium" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#DEDEDE" />

                <TextView
                    android:id="@+id/settingsRestartLauncher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="@dimen/margin_padding_medium"
                    android:paddingTop="@dimen/margin_padding_small"
                    android:paddingEnd="@dimen/margin_padding_medium"
                    android:paddingBottom="@dimen/margin_padding_small"
                    android:text="@string/restart_launcher"
                    android:textSize="@dimen/txt_medium" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#DEDEDE" />

                <TextView
                    android:id="@+id/tvRateApp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="@dimen/margin_padding_medium"
                    android:paddingTop="@dimen/margin_padding_small"
                    android:paddingEnd="@dimen/margin_padding_medium"
                    android:paddingBottom="@dimen/margin_padding_small"
                    android:text="@string/rate_app"
                    android:textSize="@dimen/txt_medium" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#DEDEDE" />

                <TextView
                    android:id="@+id/tvMoreApp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="@dimen/margin_padding_medium"
                    android:paddingTop="@dimen/margin_padding_small"
                    android:paddingEnd="@dimen/margin_padding_medium"
                    android:paddingBottom="@dimen/margin_padding_small"
                    android:text="@string/more_apps"
                    android:textSize="@dimen/txt_medium" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#DEDEDE" />

                <TextView
                    android:id="@+id/tvShareApp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="@dimen/margin_padding_medium"
                    android:paddingTop="@dimen/margin_padding_small"
                    android:paddingEnd="@dimen/margin_padding_medium"
                    android:paddingBottom="@dimen/margin_padding_small"
                    android:text="@string/share"
                    android:textSize="@dimen/txt_medium" />

            </LinearLayout>
        </com.factor.bouncy.BouncyNestedScrollView>
    </LinearLayout>

</androidx.cardview.widget.CardView>
